# hackathon-vtb-more

./: .gitignore  README.md
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
backend/alembic/: README.md  env.py
backend/alembic/versions/: _2025_08_31_00_55_create_first_models.py  _2025_08_31_22_19_add_weekly_hours_occupancy_to_vacancy_.py  _2025_09_03_22_51_sync_changes.py  _2025_09_05_20_01_add_timezone_info.py  _2025_09_05_22_18_add_reason_field_for_pre_interview_.py  _2025_09_08_22_44_add_github_link.py  _2025_09_08_23_45_add_table_for_interview_messages.py  _2025_09_09_02_57_add_skill_result_table.py  _2025_09_09_04_38_add_post_interview_result_table.py  _2025_09_09_19_01_fix_relations_and_types_in_models.py  _2025_09_09_20_30_create_emotional_analysis_and_roadmap_.py
backend/src/: config.py  config_schema.py  prepare.py
backend/src/api/: __main__.py  app.py  lifespan.py  logging_.py  utils.py
backend/src/api/application/: pre_interview_check.py  routes.py  util.py
backend/src/api/auth/: dependecies.py  dependencies.py  routes.py  util.py
backend/src/api/interview/: routes.py
backend/src/api/post_interview/: routes.py
backend/src/api/pre_interview/: routes.py
backend/src/db/: __init__.py  storage.py
backend/src/schemas/: __init__.py  application.py  auth.py  interview.py  post_interview.py  pre_interview.py  pydantic_base.py  retrieve_history.py  skills.py  user.py  vacancy.py
backend/src/services/: github_eval.py
deploy/: setup-env.sh
(+115 files in other folders)
